--- a/.gitmodules
+++ b/.gitmodules
@@ -22,9 +22,6 @@
 [submodule "pack/plugins/start/vim-lsp"]
 	path = pack/plugins/start/vim-lsp
 	url = https://github.com/prabirshrestha/vim-lsp
-[submodule "pack/plugins/opt/vim-black"]
-	path = pack/plugins/opt/vim-black
-	url = https://github.com/EgZvor/vim-black
 [submodule "pack/plugins/start/vim-bbye"]
 	path = pack/plugins/start/vim-bbye
 	url = https://github.com/moll/vim-bbye
@@ -73,3 +70,6 @@
 [submodule "pack/plugins/start/fzf.vim"]
 	path = pack/plugins/start/fzf.vim
 	url = https://github.com/junegunn/fzf.vim
+[submodule "pack/plugins/opt/black"]
+	path = pack/plugins/opt/black
+	url = https://github.com/psf/black
