add ctrlsf plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "pack/plugins/start/vim-obsession"]
 	path = pack/plugins/start/vim-obsession
 	url = https://github.com/tpope/vim-obsession
+[submodule "pack/plugins/start/ctrlsf.vim"]
+	path = pack/plugins/start/ctrlsf.vim
+	url = https://github.com/dyng/ctrlsf.vim
