--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "pack/plugins/start/vim-lsp-settings"]
 	path = pack/plugins/start/vim-lsp-settings
 	url = https://github.com/mattn/vim-lsp-settings
-[submodule "pack/plugins/start/vim-dispatch"]
-	path = pack/plugins/start/vim-dispatch
-	url = https://github.com/tpope/vim-dispatch
 [submodule "pack/plugins/opt/vim-markdown"]
 	path = pack/plugins/opt/vim-markdown
 	url = https://github.com/preservim/vim-markdown
@@ -28,33 +25,18 @@
 [submodule "pack/plugins/start/vim-fugitive"]
 	path = pack/plugins/start/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
-[submodule "pack/plugins/start/vim-airline"]
-	path = pack/plugins/start/vim-airline
-	url = https://github.com/vim-airline/vim-airline
 [submodule "pack/plugins/start/vim-sensible"]
 	path = pack/plugins/start/vim-sensible
 	url = https://github.com/tpope/vim-sensible
 [submodule "pack/plugins/opt/SimpylFold"]
 	path = pack/plugins/opt/SimpylFold
 	url = https://github.com/tmhedberg/SimpylFold
-[submodule "pack/colors/start/papercolor-theme"]
-	path = pack/colors/start/papercolor-theme
-	url = https://github.com/NLKNguyen/papercolor-theme
 [submodule "pack/plugins/start/vim-vinegar"]
 	path = pack/plugins/start/vim-vinegar
 	url = https://github.com/tpope/vim-vinegar
 [submodule "pack/plugins/start/vim-bbye"]
 	path = pack/plugins/start/vim-bbye
 	url = https://github.com/moll/vim-bbye
-[submodule "pack/plugins/start/vim-ripgrep"]
-	path = pack/plugins/start/vim-ripgrep
-	url = https://github.com/jremmen/vim-ripgrep
-[submodule "pack/colors/start/vim-gruvbox8"]
-	path = pack/colors/start/vim-gruvbox8
-	url = https://github.com/lifepillar/vim-gruvbox8
-[submodule "pack/plugins/start/vim-commentary"]
-	path = pack/plugins/start/vim-commentary
-	url = https://github.com/tpope/vim-commentary
 [submodule "pack/plugins/opt/markdown-preview.nvim"]
 	path = pack/plugins/opt/markdown-preview.nvim
 	url = https://github.com/iamcco/markdown-preview.nvim
@@ -85,12 +67,15 @@
 [submodule "pack/plugins/start/vim-obsession"]
 	path = pack/plugins/start/vim-obsession
 	url = https://github.com/tpope/vim-obsession
-[submodule "pack/plugins/start/ctrlsf.vim"]
-	path = pack/plugins/start/ctrlsf.vim
-	url = https://github.com/dyng/ctrlsf.vim
 [submodule "pack/plugins/start/fzf.vim"]
 	path = pack/plugins/start/fzf.vim
 	url = https://github.com/junegunn/fzf.vim
 [submodule "pack/plugins/start/fzf"]
 	path = pack/plugins/start/fzf
 	url = https://github.com/junegunn/fzf
+[submodule "pack/plugins/start/vim-commentary"]
+	path = pack/plugins/start/vim-commentary
+	url = https://github.com/tpope/vim-commentary
+[submodule "pack/plugins/opt/minpac"]
+	path = pack/plugins/opt/minpac
+	url = https://github.com/k-takata/minpac
